--- a/main.html
+++ b/main.html
@@ -1,14 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
-    </table>
-  </body>
+<html>
+<head>
+    <title>Nested HTML Tables</title>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            padding: 8px;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+
+<table>
+    <tr>
+        <td>
+
+            <!-- Nested Table 1 -->
+            <table>
+                <tr>
+                    <th>Nested Table 1</th>
+                </tr>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>List item 1</li>
+                            <li>List item 2</li>
+                            <li>List item 3</li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+
+        </td>
+
+        <td>
+
+            <!-- Nested Table 2 -->
+            <table>
+                <tr>
+                    <th colspan="2">Nested Table 2</th>
+                </tr>
+                <tr>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                </tr>
+                <tr>
+                    <td>Value 1</td>
+                    <td>Value 2</td>
+                </tr>
+            </table>
+
+        </td>
+    </tr>
+
+    <tr>
+        <td>
+
+            <!-- Nested Table 3 -->
+            <table>
+                <tr>
+                    <th>Nested Table 3</th>
+                </tr>
+                <tr>
+                    <td style="background-color: black; color: white;">HTML</td>
+                </tr>
+            </table>
+
+        </td>
+
+        <td>
+
+            <!-- Nested Table 4 -->
+            <table>
+                <tr>
+                    <th>Nested Table 4</th>
+                </tr>
+                <tr>
+                    <td>Some Data</td>
+                </tr>
+            </table>
+
+        </td>
+    </tr>
+</table>
+
+</body>
 </html>
